# Sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CREATE_ENV_LOCAL.md  DOWNLOAD_INSTRUCTIONS.md  FINAL_STATUS.md  LOCAL_SETUP_GUIDE.md  NATIVE_OVERLAY.md  NEXT_STEPS.md  PROGRESS.md  QUICK_START.md  README.md  SIMPLE_ENV_SETUP.txt  start.sh
engine/: Cargo.toml
engine/src/: ipc.rs  lib.rs  main.rs  memory_manager.rs  scheduler.rs  step_executor.rs  task_manager.rs  types.rs  verifier.rs
overlay_ui/: CREATE_MAIN_RS.txt  Cargo.toml
overlay_ui/src/: app.rs  app_backup.rs  app_simple.rs  automation_adapter.rs  chat.rs  lib.rs  main.rs  planner_client.rs  planner_client_fixed.rs  sidebar.rs  task_list.rs  window_manager.rs
planner/: api_server.py  planner_api.py  requirements.txt  step_generator.py  task_detector.py
shared_schemas/: project_memory_schema.json  system_memory_schema.json  task_memory_schema.json  workflow_schema.json
