[package]
name = "sentinel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
# playwright will be integrated via browser control layer
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"

[lib]
name = "sentinel_engine"
path = "src/lib.rs"

[[bin]]
name = "sentinel-engine"
path = "src/main.rs"

