[package]
name = "sentinel-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
eframe = "0.24"
egui = "0.24"

# Engine integration
sentinel-engine = { path = "../engine" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for planner API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"

# Window management (cross-platform)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winbase"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.19"

# Automation
# playwright will be added later when implementing browser automation
# For now, automation is handled via the automation_adapter trait

[[bin]]
name = "sentinel-overlay"
path = "src/main.rs"

